# not-a-blog

./: db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
not_a_blog/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
